k8s/apps/htpasswd-dashboard/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: ghcr.io/slashnephy/htpasswd-dashboard:master@sha256:aec57833d1107a7c57cf9467d9af28dc3c0d99679dc0c4fd21dead00062f5aa8
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/services.json
              readOnly: true
              subPath: services.json
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: config
          configMap:
            name: app-config
      restartPolicy: Always
      serviceAccountName: service-account
